homelab/infra/gateway/gw-kookiedotmonster.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kookiedotmonster
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.80.25
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: gateway.home.kookie.monster
      tls:
        certificateRefs:
          - kind: Secret
            name: cloudflare-cert
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-argocd
      hostname: argocd.home.kookie.monster
      tls:
        certificateRefs:
          - kind: Secret
            name: cloudflare-cert
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-hubble
      hostname: hubble.home.kookie.monster
      tls:
        certificateRefs:
          - kind: Secret
            name: cloudflare-cert
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-podinfo
      hostname: podinfo.home.kookie.monster
      tls:
        certificateRefs:
          - kind: Secret
            name: cloudflare-cert
      allowedRoutes:
        namespaces:
          from: All
